<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/plex_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_header"
        android:scaleType="centerCrop"
        android:src="@drawable/deadpool_header"
        app:layout_constraintBottom_toTopOf="@+id/guideline_header_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_header_size"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        tools:layout_editor_absoluteY="256dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/plex_poster"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/deadpool_poster"
        app:srcCompat="@drawable/deadpool_poster"
        app:layout_constraintRight_toLeftOf="@+id/plex_title"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/plex_header"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/plex_header"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/plex_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_play_circle_filled"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/plex_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plex_header" />

    <TextView
        android:id="@+id/plex_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/movie_title_deadpool"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/plex_poster"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toRightOf="@+id/plex_add" />

    <TextView
        android:id="@+id/plex_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_year_deadpool"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/plex_title"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/plex_title" />


    <ImageView
        android:id="@+id/plex_download"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/download_movie_button"
        android:src="@drawable/ic_download"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/plex_watched"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/plex_watched"
        app:layout_constraintLeft_toRightOf="@+id/plex_watched" />


    <ImageView
        android:id="@+id/plex_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_playlist_button"
        android:src="@drawable/ic_add"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="62dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/plex_poster"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" />

    <ImageView
        android:id="@+id/plex_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mark_as_watched_button"
        android:src="@drawable/ic_watched"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/plex_add"
        app:layout_constraintLeft_toRightOf="@+id/plex_add" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/time_icon"
        android:src="@drawable/ic_watch_later"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/duration_movie_deadpool"
        android:layout_marginStart="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        android:layout_marginTop="116dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="116dp"
        app:layout_constraintTop_toTopOf="@+id/plex_title"
        app:layout_constraintLeft_toRightOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deadpool_summary"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
</ScrollView>