<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewA"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintHorizontal_weight="1"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/a"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewB" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="2"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/b"
        android:background="@android:color/holo_green_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewA"
        app:layout_constraintRight_toLeftOf="@+id/textViewC"
        app:layout_constraintBottom_toTopOf="@+id/textViewE" />

    <TextView
        android:id="@+id/textViewC"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/c"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewB"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewA" />

    <TextView
        android:id="@+id/textViewD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/d"
        android:background="@android:color/holo_red_light"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewE"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/e"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewB"
        app:layout_constraintBottom_toTopOf="@+id/textViewD"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>