<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/music_cover_art"
        android:src="@drawable/philter_cover"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintDimensionRatio="w,1:1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="260dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/artist_philter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/plex_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/song_title_we_move_like_wolves"
        app:layout_constraintLeft_toLeftOf="@+id/artist"
        app:layout_constraintRight_toRightOf="@+id/artist"
        app:layout_constraintTop_toBottomOf="@+id/artist" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progress="10"
        app:layout_constraintLeft_toRightOf="@+id/song_duration"
        app:layout_constraintRight_toLeftOf="@+id/song_time"
        app:layout_constraintTop_toBottomOf="@+id/plex_title" />

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/time_elapsed"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/song_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time_song_duration"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintLeft_toRightOf="@+id/seekBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_play_circle_filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/skip_backward_button"
        app:layout_constraintRight_toLeftOf="@+id/skip_forward_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/skip_backward_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/skip_backward_button"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/skip_forward_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/skip_forward_button"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/play_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>