<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewA"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/a"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="100dp" />

    <TextView
        android:id="@+id/textViewC"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/c"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintTop_toBottomOf="@id/textViewA"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.475"
        tools:layout_editor_absoluteX="135dp" />

    <Button
        android:id="@+id/remove_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_goneMarginLeft="100dp"
        android:layout_marginTop="32dp"
        android:onClick="removeViews"
        android:text="@string/removeview"
        app:layout_constraintLeft_toRightOf="@+id/textViewA"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>